# cfd-solver

./: .env.example  .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml  renovate.json  requirements.txt
.claude/skills/: add-feature.md
.github/workflows/: ci.yml
scripts/: animate.py  animate_fsi.py  run_cylinder.py  visualize.py
src/: __init__.py  advection.py  backend.py  boundary.py  flux.py  gas.py  grid.py  io.py  levelset.py  numba_kernels.py  pressure.py  reconstruction.py  rigidbody.py  solver.py  splitting.py
tests/: test_advection.py  test_flux.py  test_grid.py  test_rigidbody.py  test_semi_implicit.py  test_smoke.py  test_sod.py
