[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "cfd-solver"
version = "0.1.0"
description = "2D compressible flow solver with Roe flux scheme"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24",
    "matplotlib>=3.5",
]

[project.optional-dependencies]
gpu = ["cupy-cuda12x>=12.0"]
dev = ["pytest>=7.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
