[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cfd-solver"
version = "0.1.0"
description = "2D compressible flow solver with Roe flux scheme"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24",
    "matplotlib>=3.5",
]

[project.optional-dependencies]
gpu = ["cupy-cuda12x>=12.0"]
dev = ["pytest>=7.0", "ruff>=0.4", "mypy>=1.10", "numpy-stubs>=1.0; python_version>='3.10'"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "T20"]

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
