[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cfd-solver"
version = "0.1.0"
description = "2D compressible flow solver with Roe flux scheme"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24",
    "matplotlib>=3.5",
    "scipy>=1.9",
]

[project.optional-dependencies]
gpu-nvidia = ["cupy-cuda12x>=12.0"]
gpu-apple = ["mlx>=0.10"]
numba = ["numba>=0.58"]
dev = ["pytest>=7.0", "ruff>=0.4", "mypy>=1.10"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["src.grid", "src.solver", "src.flux", "src.boundary", "src.reconstruction", "src.gas"]
# Dynamic array backend (numpy/cupy) produces unresolvable types
disable_error_code = ["index", "operator", "unused-ignore"]

[[tool.mypy.overrides]]
# Optional GPU/accelerator backends — not installed in CI
module = ["numba", "numba.*", "mlx", "mlx.*", "cupy", "cupy.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# scipy ships no py.typed marker; stubs are a separate install
module = ["scipy", "scipy.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
